fix: fix the bug for funding start and end date update